--- a/ci/terraform/inventory.tmpl
+++ b/ci/terraform/inventory.tmpl
@@ -1,8 +1,8 @@
-[agents]
+[testing_hosts_linux]
 %{ for index, vms in agent-ids ~}
 ${vms} ansible_user=${agent-user[index]} ansible_host=${agent-private-ip[index]}
 %{ endfor ~}
 
-[agents:vars]
+[testing_hosts_linux:vars]
 ansible_ssh_private_key_file=~/.ssh/caos-dev-arm.cer
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
