--- a/test/canaries/roles/otel-dockerized/files/nr-otel-collector-agent.yml.j2
+++ b/test/canaries/roles/otel-dockerized/files/nr-otel-collector-agent.yml.j2
@@ -168,7 +168,7 @@ exporters:
   otlp:
     endpoint: staging-otlp.nr-data.net:4317
     headers:
-      api-key: {{ nr_license_key }}
+      api-key: {{ nr_license_key_canaries }}
 
 
 service:
