Align host monitoring config with newrelic-opentelemetry-examples

--- a/test/canaries/templates/nr-otel-collector-agent.yml.j2
+++ b/test/canaries/templates/nr-otel-collector-agent.yml.j2
@@ -191,7 +191,7 @@ processors:
 exporters:
   logging:
   otlp:
-    endpoint: staging-otlp.nr-data.net:4317
+    endpoint: https://staging-otlp.nr-data.net:4317
     headers:
       api-key: {{ nr_license_key_canaries }}
 
